Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -58,7 +58,7 @@
                                 <source srcset="{{'intro-feature-1@mob.png' | asset_url }} 1x, {{'intro-feature-1@mob@2x.png' | asset_url }} 2x" type="image/png" /><img class="intro__feature-image" src="{{'intro-feature-1@mob.png' | asset_url }}" data-src="{{'intro-feature-1@mob.png' | asset_url }} 1x, {{'intro-feature-1@mob@2x.png' | asset_url }} 2x" alt="" />
                             </picture>
                             <h3 class="intro__feature-title">Compile a colorful puzzle from thousand of pieces</h3>
-                            <p class="intro__feature-text">Фигурки в виде драконов, воздушных шаров и животных кусочек за кусочком собираются в иллюстрацию Каппадокии.</p>
+                            <p class="intro__feature-text">Dragons, gas ballons and animals-like figurines piece by piece add up to Cappadocia illustration</p>
                         </li>
                         <li class="intro__feature">
                             <picture>
@@ -67,7 +67,7 @@
                                 <source srcset="{{'intro-feature-2@mob.webp' | asset_url }} 1x, {{'intro-feature-2@mob@2x.webp' | asset_url }} 2x" type="image/webp" />
                                 <source srcset="{{'intro-feature-2@mob.png' | asset_url }} 1x, {{'intro-feature-2@mob@2x.png' | asset_url }} 2x" type="image/png" /><img class="intro__feature-image" src="{{'intro-feature-2@mob.png' | asset_url }}" data-src="{{'intro-feature-2@mob.png' | asset_url }} 1x, {{'intro-feature-2@mob@2x.png' | asset_url }} 2x" alt="" />
                             </picture>
-                            <h3 class="intro__feature-title">Разглядывайте и находите секреты:</h3>
+                            <h3 class="intro__feature-title">Look and find out secrets:</h3>
                             <p class="intro__feature-text">Quezzle is a detailed illustration with hundreds of characters and stories. 
                             </p>
                         </li>
@@ -78,8 +78,8 @@
                                 <source srcset="{{'intro-feature-3@mob.webp' | asset_url }} 1x, {{'intro-feature-3@mob@2x.webp' | asset_url }} 2x" type="image/webp" />
                                 <source srcset="{{'intro-feature-3@mob.png' | asset_url }} 1x, {{'intro-feature-3@mob@2x.png' | asset_url }} 2x" type="image/png" /><img class="intro__feature-image" src="{{'intro-feature-3@mob.png' | asset_url }}" data-src="{{'intro-feature-3@mob.png' | asset_url }} 1x, {{'intro-feature-3@mob@2x.png' | asset_url }} 2x" alt="" />
                             </picture>
-                            <h3 class="intro__feature-title">Проходите квесты и спасите принцессу</h3>
-                            <p class="intro__feature-text">На помощь придут 3D-фигурки Слона, Пегаса, Орла и Льва &mdash; друзья принца Юнидрагон ждут вас в каждой части Quezzle.</p>
+                            <h3 class="intro__feature-title">Get through quests and save the Princess</h3>
+                            <p class="intro__feature-text">The Elephant, Pegasus, the Eagle and the Lion 3D-figurines come to help — Unidragon Prince`s friends are waiting for you in each Quezzle part</p>
                         </li>
                     </ul>
                     <div class="intro__spinner-wrapper">
@@ -124,7 +124,7 @@
             <section class="about lazy-bg page__about" id="about">
                 <div class="about__container">
                     <div class="about__top">
-                        <h2 class="title title--white about__title">Знакомьтесь: Quezzle</h2>
+                        <h2 class="title title--white about__title">Meet Quezzle</h2>
                     </div><a class="btn-video js-popup-video about__btn-video" href="https://www.youtube.com/watch?v=9YaK6reb5vc">
                         <div class="btn-video__cover">
                             <picture>
@@ -164,16 +164,16 @@
                                 </picture>
                             </div>
                             <div class="product__content">
-                                <h3 class="product__title">Часть 1 из 4</h3>
-                                <p class="product__subtitle">Ознакомьтесь с базовыми механиками Quezzle</p><button class="product__toggle" type="button"><span class="product__toggle-caption">Подробнее</span><span class="product__toggle-caption">Скрыть</span></button>
+                                <h3 class="product__title">Part 1 of 4</h3>
+                                <p class="product__subtitle">Please check Quezzle basic mechanics</p><button class="product__toggle" type="button"><span class="product__toggle-caption">Подробнее</span><span class="product__toggle-caption">Скрыть</span></button>
                                 <div class="product__details">
                                     <ul class="product__options">
-                                        <li class="product__option">Яркий пазл <br>из 250 уникальных деталей, 3D-конструктор, несколько мини-миссий и базовые механики Quezzle</li>
+                                        <li class="product__option">250 colorful pieces bright jigsaw puzzle, 3D-constructor, several mini-missions and Quezzle basic mechanics. </li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="product__order">
-                                <p class="product__price-label">Цена по предзаказу</p>
+                                <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">3 490 ₽</p>
                                 <p class="product__price">2 490 ₽</p><button class="button product__button-buy js-buy button--blue" type="button" data-product-id="1"><span class="button__caption">Buy</span></button>
                             </div>
@@ -202,12 +202,12 @@
                                         <li class="product__feature">30 additional tasks</li>
                                         <li class="product__feature">5 mazes</li>
                                         <li class="product__feature disabled">6 mini-puzzles</li>
-                                        <li class="product__feature disabled">4 сюжетных лабиринта</li>
+                                        <li class="product__feature disabled">4 storyline mazes</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="product__order">
-                                <p class="product__price-label">Цена по предзаказу</p>
+                                <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">8 990 ₽</p>
                                 <p class="product__price">6 990 ₽</p><button class="button product__button-buy js-buy button--blue" type="button" data-product-id="2"><span class="button__caption">Buy</span></button>
                             </div>
@@ -241,7 +241,7 @@
                                 </div>
                             </div>
                             <div class="product__order">
-                                <p class="product__price-label">Цена по предзаказу</p>
+                                <p class="product__price-label">Price at pre-order</p>
                                 <p class="product__price-old">9 990 ₽</p>
                                 <p class="product__price">7 990 ₽</p><button class="button product__button-buy js-buy" type="button" data-product-id="3"><span class="button__caption">Buy</span></button>
                             </div>
@@ -944,7 +944,7 @@
                                     </ul>
                                 </div>
                                 <div class="kit__right">
-                                    <h4 class="kit__price-label">Цена по предзаказу</h4>
+                                    <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">3 490 ₽</p>
                                     <p class="kit__price">2 490 ₽</p><button class="button kit__button-buy js-buy button--blue" type="button" data-product-id="1"><span class="button__caption">Buy</span></button>
                                 </div>
@@ -973,7 +973,7 @@
                                     </ul>
                                 </div>
                                 <div class="kit__right">
-                                    <h4 class="kit__price-label">Цена по предзаказу</h4>
+                                    <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">8 990 ₽</p>
                                     <p class="kit__price">6 990 ₽</p><button class="button kit__button-buy js-buy button--blue" type="button" data-product-id="2"><span class="button__caption">Buy</span></button>
                                 </div>
@@ -1004,7 +1004,7 @@
                                     </ul>
                                 </div>
                                 <div class="kit__right">
-                                    <h4 class="kit__price-label">Цена по предзаказу</h4>
+                                    <h4 class="kit__price-label">Price at pre-order</h4>
                                     <p class="kit__price-old">9 990 ₽</p>
                                     <p class="kit__price">7 990 ₽</p><button class="button kit__button-buy js-buy" type="button" data-product-id="3"><span class="button__caption">Buy</span></button>
                                 </div>
