Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -996,7 +996,7 @@
                                         <li class="kit__item">36 см х 25 см &mdash; собранный пазл</li>
                                         <li class="kit__item"><b>1000 уникальных деталей</b></li>
                                         <li class="kit__item">Инструкция с заданиями квеста</li>
-                                        <li class="kit__item">3D-фигурка &mdash; 4шт.</li>
+                                        <li class="kit__item">3D-figurine — 4 pcs</li>
                                         <li class="kit__item"><b>40 additional tasks</b></li>
                                         <li class="kit__item"><b>6 mazes</b></li>
                                         <li class="kit__item"><b>6 mini-puzzles</b></li>
@@ -1107,65 +1107,65 @@
             </section>
             <section class="answers lazy-bg page__answers" id="answers">
                 <div class="answers__container">
-                    <h2 class="title title--white answers__title">7 ответов на ваши вопросы</h2>
+                    <h2 class="title title--white answers__title">7 answers for your questions</h2>
                     <div class="answers__row">
                         <div class="answers__left">
                             <div class="faq answers__faq">
                                 <ul class="faq__items">
                                     <li class="faq__item">
-                                        <h3 class="faq__question"><button type="button">Сколько стоит доставка и как осуществляется оплата?<svg class="svg-icon svg-icon--arrow-faq">
+                                        <h3 class="faq__question"><button type="button">How much does the delivery cost and how to pay?<svg class="svg-icon svg-icon--arrow-faq">
                                                     <use xlink:href="{{'img-sprite.svg#arrow-faq' | asset_url }}"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
-                                            <p>Доставка осуществляется транспортными компаниями СДЭК, DPD и Почтой России. Стоимость курьерской доставки в крупные города начинается от 350 рублей, до пункта выдачи заказов также от 350 рублей. Более подробную информацию вы получите после оформления заявки. И, конечно, у вас всегда есть возможность отказаться от оставленной заявки, если стоимость доставки вас не устроит.</p>
+                                            <p>Delivery is carried out by SDEK, DPD and Russian Post. Courier delivery cost to some of big cities starts with 350 Rub; delivery to place of purchase also starts with 350 Rub. You will get more information after you place a request. Certainly you always have an opportunity to refuse if you don't like delivery cost. </p>
                                         </div>
                                     </li>
                                     <li class="faq__item">
-                                        <h3 class="faq__question"><button type="button">Подойдет ли эта игра для всей семьи?<svg class="svg-icon svg-icon--arrow-faq">
+                                        <h3 class="faq__question"><button type="button">Is this game really good for all the family?<svg class="svg-icon svg-icon--arrow-faq">
                                                     <use xlink:href="{{'img-sprite.svg#arrow-faq' | asset_url }}"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
-                                            <p>Quezzle подойдет людям любого возраста. Quezzle &mdash; это яркая и детализированная иллюстрация из тысячи уникальных кусочков. Сотни историй, которые можно разглядывать часами. Загадки и задания, которые можно проходить вместе. Каждый найдет в нашем новом продукте интересные детали. Вы сможете провести время с удовольствием всей семьей. Собирать, разглядывать и искать предметы. Играть с персонажами и проходить квест. Дополнительные 3D-фигурки и мини-пазлы дополнят историю.</p>
+                                            <p>Quezzle is good for people of any age. Quezzle is a colorful detailed illustration from thousand of unique pieces. Hundreds of stories to be watched for hours. Riddles and tasks you can go through together. Everyone will find interesting moments in our new product. You can have a good pleasant time with all your family. Compile, look attentively and find objects. Play with characters and go through a quest. Extra 3D-figurines and mini-puzzles will complement the story.</p>
                                         </div>
                                     </li>
                                     <li class="faq__item">
-                                        <h3 class="faq__question"><button type="button">Чем отличаются части Quezzle?<svg class="svg-icon svg-icon--arrow-faq">
+                                        <h3 class="faq__question"><button type="button">Which is the difference in Quezzle parts?<svg class="svg-icon svg-icon--arrow-faq">
                                                     <use xlink:href="{{'img-sprite.svg#arrow-faq' | asset_url }}"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
-                                            <p>Quezzle состоит из четырех частей, каждая из которых отличается иллюстрацией и персонажами. Вместе они складываются в единый мир. В каждой части можно найти уникальную 3D-фигурку специального персонажа, а также пройти по десять отдельных заданий. Всю историю вы сможете пройти, когда соберете мир Каппадокии целиком.</p>
+                                            <p>Quezzle consists of 4 parts, each one differs in illustration and characters. Altogether they form an entire world. In each part one can find a unique special character 3D-figurine, as well as go through ten separate tasks. You will be able to go through the whole story when you assemble entire Cappadocia world.</p>
                                         </div>
                                     </li>
                                     <li class="faq__item">
-                                        <h3 class="faq__question"><button type="button">Из каких материалов изготавливается Quezzle?<svg class="svg-icon svg-icon--arrow-faq">
+                                        <h3 class="faq__question"><button type="button">Which materials is Quezzle made of?<svg class="svg-icon svg-icon--arrow-faq">
                                                     <use xlink:href="{{'img-sprite.svg#arrow-faq' | asset_url }}"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
-                                            <p>Quezzle изготавливается из натуральных материалов, спрессованных под давлением волокон древесины. Поэтому наши пазлы долговечны. При открытии коробки вы сможете почувствовать приятный запах дерева. Мы используем сертифицированную краску, которая фиксируется с помощью ультрафиолета, что позволяет нашим иллюстрациям долго оставаться яркими, не повреждаться и не стираться.</p>
+                                            <p>Quezzle is made of natural materials — high-pressured wood fiber. That’'s why our puzzles are durable. When opening a box you can smell a pleasant wooden scent. We use certificated UF-fixed paints. It allows our illustrations stay bright long, not to get damaged or erased</p>
                                         </div>
                                     </li>
                                     <li class="faq__item">
-                                        <h3 class="faq__question"><button type="button">Подойдет ли Quezzle в качестве подарка?<svg class="svg-icon svg-icon--arrow-faq">
+                                        <h3 class="faq__question"><button type="button">Is Quezzle good as a gift?<svg class="svg-icon svg-icon--arrow-faq">
                                                     <use xlink:href="{{'img-sprite.svg#arrow-faq' | asset_url }}"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
-                                            <p>Quezzle отлично подойдет для подарка близкому, друзьям и коллегам, а может и самому себе. В Quezzle каждый найдет развлечение по душе. Quezzle &mdash; это 3 разных активности в одном: яркий и детализированный пазл из 1000 кусочков, красивая и захватывающая иллюстрация, которую можно разглядывать часами, множество заданий и секретов. А еще вас ждет дополненная реальность. Все это в четырех оригинальных коробках, с индивидуальным оформлением, которые сами уже как подарок.</p>
+                                            <p>Quezzle is a good present for your nearest, friends, colleagues or even for yourself. Everyone finds entertainment he likes in Quezzle. Quezzle has 3 different activities in one: bright detailed puzzle from 1000 of pieces, beautiful fascinating illustration you are able to look at for hours, plenty of tasks and secrets. As well, you are awaited by augmented reality. All this is packed into 4 unusual boxes individually decorated, and these boxes themselves are already a gift</p>
                                         </div>
                                     </li>
                                     <li class="faq__item">
-                                        <h3 class="faq__question"><button type="button">Реализуете ли вы оптовую продажу вашей продукции?<svg class="svg-icon svg-icon--arrow-faq">
+                                        <h3 class="faq__question"><button type="button">Do you sell your products wholesale?<svg class="svg-icon svg-icon--arrow-faq">
                                                     <use xlink:href="{{'img-sprite.svg#arrow-faq' | asset_url }}"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
-                                            <p>Оставьте заявку в специальном разделе и мы свяжемся с вами, чтобы обсудить условия. <br>Мы работаем с юридическими лицами. Наши пазлы вы можете оплатить по безналичному расчету с юридического лица без НДС.</p>
+                                            <p>Fill in your request in a special window and we will contact you to negotiate conditions. <br>We work with legal entities. You can pay for our puzzles non-cash without VAT from a legal entity. </p>
                                         </div>
                                     </li>
                                     <li class="faq__item">
-                                        <h3 class="faq__question"><button type="button">Есть еще вопросы?<svg class="svg-icon svg-icon--arrow-faq">
+                                        <h3 class="faq__question"><button type="button">Any questions?<svg class="svg-icon svg-icon--arrow-faq">
                                                     <use xlink:href="{{'img-sprite.svg#arrow-faq' | asset_url }}"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
-                                            <p>Остались вопросы? Вы можете узнать более подробную информацию отправив письмо на почту care@unidragon.com или по телефону <a href="tel:+74951093075">+7 (495) 109 3075.</a></p>
+                                            <p>Got any question? For more information turn to e-mail: care@unidragon.com or just call:<a href="tel:+74951093075">+7 (495) 109 3075.</a></p>
                                         </div>
                                     </li>
                                 </ul>
