--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1172,23 +1172,25 @@
                             </div>
                         </div>
                         <div class="answers__right">
-                            <form class="form-feedback js-validate answers__form-feedback" action="#" method="POST" id="form-feedback">
-                                <h3 class="form-feedback__title">Форма обратной связи</h3>
-                                <div class="field field--type-text field--blue-light form-feedback__field"><label class="field__label" for="form-feedback-name">Имя</label>
-                                    <div class="field__field"><input type="text" name="name" id="form-feedback-name" required="required" data-validator-required-message="Обязательное поле" /></div>
+                            {% form 'contact' %}
+                                {{ form_errors | default_errors }}
+                                <h3 class="form-feedback__title">Feedback form</h3>
+                                <div class="field field--type-text field--blue-light form-feedback__field"><label class="field__label" for="form-feedback-name">Name</label>
+                                    <div class="field__field"><input type="text" name="contact[first_name]" id="form-feedback-name" required="required" data-validator-required-message="Required field" /></div>
                                 </div>
-                                <div class="field field--type-tel field--blue-light form-feedback__field"><label class="field__label" for="form-feedback-phone">Телефон</label>
-                                    <div class="field__field"><input type="tel" name="phone" id="form-feedback-phone" required="required" data-validator-required-message="Обязательное поле" /></div>
+                                <div class="field field--type-tel field--blue-light form-feedback__field"><label class="field__label" for="form-feedback-phone">E-mail</label>
+                                    <div class="field__field"><input type="email" name="contact[email]" id="form-feedback-phone" required="required" data-validator-required-message="Required field" /></div>
                                 </div>
-                                <div class="field field--type-textarea field--blue-light form-feedback__field"><label class="field__label" for="form-feedback-message">Вопрос или предложение*</label>
-                                    <div class="field__field"><textarea name="message" id="form-feedback-message" data-validator-required-message="Обязательное поле"></textarea></div>
+                                <div class="field field--type-textarea field--blue-light form-feedback__field"><label class="field__label" for="form-feedback-message">Question or suggestion*</label>
+                                    <div class="field__field"><textarea name="contact[body]" id="form-feedback-message" data-validator-required-message="Required field"></textarea></div>
                                 </div>
-                                <p class="form-feedback__note">*необязательное поле</p>
-                                <div class="form-feedback__button-wrapper"><button class="button form-feedback__submit" type="submit"><span class="button__caption">Отправить</span></button></div>
-                            </form>
+                                <p class="form-feedback__note">*optional field</p>
+                                
+                                <div class="form-feedback__button-wrapper"><button class="button form-feedback__submit" type="submit"><span class="button__caption">Send</span></button></div>
+                                {% endform %}
                             <div class="answers__contacts">
-                                <h3 class="answers__contacts-title">Остались вопросы? </h3>
-                                <p class="answers__contacts-label">Свяжитесь с нами:</p><a class="answers__contact" href="tel:+74951093075" target="_blank" rel="nofollow noopener"><span class="answers__contact-icon"><svg class="svg-icon svg-icon--phone">
+                                <h3 class="answers__contacts-title">Still have questions? </h3>
+                                <p class="answers__contacts-label">Contact us:</p><a class="answers__contact" href="tel:+74951093075" target="_blank" rel="nofollow noopener"><span class="answers__contact-icon"><svg class="svg-icon svg-icon--phone">
                                             <use xlink:href="{{'img-sprite.svg#phone' | asset_url }}"></use>
                                         </svg></span><span class="answers__contact-caption">+7 (495) 109 30 75</span></a><a class="answers__contact" href="mailto:care@unidragon.com" target="_blank" rel="nofollow noopener"><span class="answers__contact-icon"><svg class="svg-icon svg-icon--email">
                                             <use xlink:href="{{'img-sprite.svg#email' | asset_url }}"></use>
@@ -1298,7 +1300,7 @@
                     <div class="logo footer__logo"><a href="#intro"> <img src="{{'img-logo.svg' | asset_url }}" width="196" height="50" alt="QUEZZLE - Puzzle and Quest" /></a></div>
                 </div>
                 <div class="footer__top-col">
-                    <div class="footer__title">Меню</div>
+                    <div class="footer__title">Menu</div>
                     <nav class="menu-footer footer__menu">
                         <ul class="menu-footer__items">
                             <li class="menu-footer__item"><a class="menu-footer__link" href="#about">What is Quezzle? </a></li>
@@ -1308,14 +1310,14 @@
                     </nav>
                 </div>
                 <div class="footer__top-col">
-                    <div class="footer__title">Социальные сети</div><a class="footer__contact" href="https://www.youtube.com/channel/UCBqZL-EiSfLxGQfAzb4FwwA" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--youtube">
+                    <div class="footer__title">Social networks</div><a class="footer__contact" href="https://www.youtube.com/channel/UCBqZL-EiSfLxGQfAzb4FwwA" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--youtube">
                                 <use xlink:href="{{'img-sprite.svg#youtube' | asset_url }}"></use>
                             </svg></span><span class="footer__contact-caption">QUEZZLE</span></a><a class="footer__contact" href="https://www.instagram.com/quezzle_com" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--instagram">
                                 <use xlink:href="{{'img-sprite.svg#instagram' | asset_url }}"></use>
                             </svg></span><span class="footer__contact-caption">@quezzle_com</span></a>
                 </div>
                 <div class="footer__top-col">
-                    <div class="footer__title">Контакты</div><a class="footer__contact" href="tel:+74951093075" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--phone">
+                    <div class="footer__title">Contacts</div><a class="footer__contact" href="tel:+74951093075" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--phone">
                                 <use xlink:href="{{'img-sprite.svg#phone' | asset_url }}"></use>
                             </svg></span><span class="footer__contact-caption">+7 (495) 109 30 75</span></a><a class="footer__contact" href="mailto:care@unidragon.com" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--email">
                                 <use xlink:href="{{'img-sprite.svg#email' | asset_url }}"></use>
@@ -1345,7 +1347,7 @@
                             <picture>
                                 <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob/icon-1.webp' | asset_url }} 1x, {{'menu-mob/icon-1@2x.webp' | asset_url }} 2x" type="image/webp" />
                                 <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'menu-mob/icon-1.png' | asset_url }} 1x, {{'menu-mob/icon-1@2x.png' | asset_url }} 2x" type="image/png" /><img class="menu-mob__icon lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'menu-mob/icon-1.png' | asset_url }} 1x, {{'menu-mob/icon-1@2x.png' | asset_url }} 2x" width="42" height="26" alt="" />
-                            </picture><span class="menu-mob__caption">Что такое Quezzle?</span>
+                            </picture><span class="menu-mob__caption">What is Quezzle?</span>
                         </a></li>
                     <li class="menu-mob__item"><a class="menu-mob__link js-popup-close" href="#team">
                             <picture>
@@ -1363,15 +1365,6 @@
             </nav>
             <div class="mmenu__lang"><a class="mmenu__lang-item js-popup-close current" href="#"><img class="mmenu__lang-icon" src="{{'russian.svg' | asset_url }}" width="20" height="20" alt="Русский" /><span class="mmenu__lang-caption">Рус</span></a><a class="mmenu__lang-item js-popup-close" href="#"><img class="mmenu__lang-icon" src="{{'english.svg' | asset_url }}" width="20" height="20" alt="English" /><span class="mmenu__lang-caption">Eng</span></a></div>
             <div class="mmenu__button-wrapper"><a class="button mmenu__button-buy js-popup-close button--blue" href="#order" role="button"><span class="button__caption">Buy</span></a></div>
-        </div>
-    </div>
-    <div class="popup popup--success mfp-hide lazy-bg" id="popup-success">
-        <div class="popup__icon-ok"><svg class="svg-icon svg-icon--ok">
-                <use xlink:href="{{'img-sprite.svg#ok' | asset_url }}"></use>
-            </svg></div>
-        <div class="popup__box">
-            <p class="popup__message">Ваше сообщение принято</p>
-            <div class="popup__button-wrapper"><button class="button popup__button js-popup-close button--white" type="button"><span class="button__caption">Назад</span></button></div>
         </div>
     </div>
 </div>
