Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1028,7 +1028,7 @@
                                         <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'reviews-inthebox_boardgames.jpg' | asset_url }}" type="image/jpeg" /><img class="lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'reviews-inthebox_boardgames.jpg' | asset_url }}" alt="" />
                                     </picture>
                                 </div><a class="review__contact" href="https://www.instagram.com/inthebox_boardgames/" target="_blank"><span class="review__contact-icon"><svg class="svg-icon svg-icon--instagram2">
-                                            <use xlink:href="instagram2"></use>
+                                            <use xlink:href="#instagram2"></use>
                                         </svg></span><span class="review__contact-caption">@inthebox_boardgames</span></a>
                             </div>
                             <div class="review__number">01</div>
@@ -1044,7 +1044,7 @@
                                         <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'reviews-trybsolo.jpg' | asset_url }}" type="image/jpeg" /><img class="lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'reviews-trybsolo.jpg' | asset_url }}" alt="" />
                                     </picture>
                                 </div><a class="review__contact" href="https://www.instagram.com/trybsolo/" target="_blank"><span class="review__contact-icon"><svg class="svg-icon svg-icon--instagram2">
-                                            <use xlink:href="instagram2"></use>
+                                            <use xlink:href="#instagram2"></use>
                                         </svg></span><span class="review__contact-caption">@trybsolo</span></a>
                             </div>
                             <div class="review__number">02</div>
@@ -1060,7 +1060,7 @@
                                         <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'reviews-meeple_v_people.jpg' | asset_url }}" type="image/jpeg" /><img class="lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'reviews-meeple_v_people.jpg' | asset_url }}" alt="" />
                                     </picture>
                                 </div><a class="review__contact" href="https://www.instagram.com/meeple_v_people/" target="_blank"><span class="review__contact-icon"><svg class="svg-icon svg-icon--instagram2">
-                                            <use xlink:href="instagram2"></use>
+                                            <use xlink:href="#instagram2"></use>
                                         </svg></span><span class="review__contact-caption">@meeple_v_people</span></a>
                             </div>
                             <div class="review__number">03</div>
@@ -1076,7 +1076,7 @@
                                         <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'reviews-vasiliev_books.jpg' | asset_url }}" type="image/jpeg" /><img class="lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'reviews-vasiliev_books.jpg' | asset_url }}" alt="" />
                                     </picture>
                                 </div><a class="review__contact" href="https://www.instagram.com/vasiliev_books/" target="_blank"><span class="review__contact-icon"><svg class="svg-icon svg-icon--instagram2">
-                                            <use xlink:href="instagram2"></use>
+                                            <use xlink:href="#instagram2"></use>
                                         </svg></span><span class="review__contact-caption">@vasiliev_books</span></a>
                             </div>
                             <div class="review__number">04</div>
@@ -1092,7 +1092,7 @@
                                         <source srcset="{{'placeholder.png' | asset_url }}" data-srcset="{{'reviews-fasolya.olya.jpg' | asset_url }}" type="image/jpeg" /><img class="lazy" src="{{'placeholder.png' | asset_url }}" data-src="{{'reviews-fasolya.olya.jpg' | asset_url }}" alt="" />
                                     </picture>
                                 </div><a class="review__contact" href="https://www.instagram.com/fasolya.olya/" target="_blank"><span class="review__contact-icon"><svg class="svg-icon svg-icon--instagram2">
-                                            <use xlink:href="instagram2"></use>
+                                            <use #instagram2"></use>
                                         </svg></span><span class="review__contact-caption">@fasolya.olya</span></a>
                             </div>
                             <div class="review__number">05</div>
@@ -1114,7 +1114,7 @@
                                 <ul class="faq__items">
                                     <li class="faq__item">
                                         <h3 class="faq__question"><button type="button">How much does the delivery cost and how to pay?<svg class="svg-icon svg-icon--arrow-faq">
-                                                    <use xlink:href="arrow-faq"></use>
+                                                    <use xlink:href="#arrow-faq"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
                                             <p>Delivery is carried out by SDEK, DPD and Russian Post. Courier delivery cost to some of big cities starts with 350 Rub; delivery to place of purchase also starts with 350 Rub. You will get more information after you place a request. Certainly you always have an opportunity to refuse if you don't like delivery cost. </p>
@@ -1122,7 +1122,7 @@
                                     </li>
                                     <li class="faq__item">
                                         <h3 class="faq__question"><button type="button">Is this game really good for all the family?<svg class="svg-icon svg-icon--arrow-faq">
-                                                    <use xlink:href="arrow-faq"></use>
+                                                    <use xlink:href="#arrow-faq"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
                                             <p>Quezzle is good for people of any age. Quezzle is a colorful detailed illustration from thousand of unique pieces. Hundreds of stories to be watched for hours. Riddles and tasks you can go through together. Everyone will find interesting moments in our new product. You can have a good pleasant time with all your family. Compile, look attentively and find objects. Play with characters and go through a quest. Extra 3D-figurines and mini-puzzles will complement the story.</p>
@@ -1130,7 +1130,7 @@
                                     </li>
                                     <li class="faq__item">
                                         <h3 class="faq__question"><button type="button">Which is the difference in Quezzle parts?<svg class="svg-icon svg-icon--arrow-faq">
-                                                    <use xlink:href="arrow-faq"></use>
+                                                    <use xlink:href="#arrow-faq"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
                                             <p>Quezzle consists of 4 parts, each one differs in illustration and characters. Altogether they form an entire world. In each part one can find a unique special character 3D-figurine, as well as go through ten separate tasks. You will be able to go through the whole story when you assemble entire Cappadocia world.</p>
@@ -1138,7 +1138,7 @@
                                     </li>
                                     <li class="faq__item">
                                         <h3 class="faq__question"><button type="button">Which materials is Quezzle made of?<svg class="svg-icon svg-icon--arrow-faq">
-                                                    <use xlink:href="arrow-faq"></use>
+                                                    <use xlink:href="#arrow-faq"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
                                             <p>Quezzle is made of natural materials — high-pressured wood fiber. That’'s why our puzzles are durable. When opening a box you can smell a pleasant wooden scent. We use certificated UF-fixed paints. It allows our illustrations stay bright long, not to get damaged or erased</p>
@@ -1146,7 +1146,7 @@
                                     </li>
                                     <li class="faq__item">
                                         <h3 class="faq__question"><button type="button">Is Quezzle good as a gift?<svg class="svg-icon svg-icon--arrow-faq">
-                                                    <use xlink:href="arrow-faq"></use>
+                                                    <use xlink:href="#arrow-faq"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
                                             <p>Quezzle is a good present for your nearest, friends, colleagues or even for yourself. Everyone finds entertainment he likes in Quezzle. Quezzle has 3 different activities in one: bright detailed puzzle from 1000 of pieces, beautiful fascinating illustration you are able to look at for hours, plenty of tasks and secrets. As well, you are awaited by augmented reality. All this is packed into 4 unusual boxes individually decorated, and these boxes themselves are already a gift</p>
@@ -1154,7 +1154,7 @@
                                     </li>
                                     <li class="faq__item">
                                         <h3 class="faq__question"><button type="button">Do you sell your products wholesale?<svg class="svg-icon svg-icon--arrow-faq">
-                                                    <use xlink:href="arrow-faq"></use>
+                                                    <use xlink:href="#arrow-faq"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
                                             <p>Fill in your request in a special window and we will contact you to negotiate conditions. <br>We work with legal entities. You can pay for our puzzles non-cash without VAT from a legal entity. </p>
@@ -1162,7 +1162,7 @@
                                     </li>
                                     <li class="faq__item">
                                         <h3 class="faq__question"><button type="button">Any questions?<svg class="svg-icon svg-icon--arrow-faq">
-                                                    <use xlink:href="arrow-faq"></use>
+                                                    <use xlink:href="#arrow-faq"></use>
                                                 </svg></button></h3>
                                         <div class="faq__answer">
                                             <p>Got any question? For more information turn to e-mail: care@unidragon.com or just call:<a href="tel:+74951093075">+7 (495) 109 3075.</a></p>
@@ -1191,9 +1191,9 @@
                             <div class="answers__contacts">
                                 <h3 class="answers__contacts-title">Still have questions? </h3>
                                 <p class="answers__contacts-label">Contact us:</p><a class="answers__contact" href="tel:+74951093075" target="_blank" rel="nofollow noopener"><span class="answers__contact-icon"><svg class="svg-icon svg-icon--phone">
-                                            <use xlink:href="phone"></use>
+                                            <use xlink:href="#phone"></use>
                                         </svg></span><span class="answers__contact-caption">+7 (495) 109 30 75</span></a><a class="answers__contact" href="mailto:care@unidragon.com" target="_blank" rel="nofollow noopener"><span class="answers__contact-icon"><svg class="svg-icon svg-icon--email">
-                                            <use xlink:href="email"></use>
+                                            <use xlink:href="#email"></use>
                                         </svg></span><span class="answers__contact-caption">care@unidragon.com</span></a>
                             </div>
                         </div>
@@ -1311,14 +1311,14 @@
                 </div>
                 <div class="footer__top-col">
                     <div class="footer__title">Social networks</div><a class="footer__contact" href="https://www.youtube.com/channel/UCBqZL-EiSfLxGQfAzb4FwwA" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--youtube">
-                                <use xlink:href="youtube"></use>
+                                <use xlink:href="#youtube"></use>
                             </svg></span><span class="footer__contact-caption">QUEZZLE</span></a><a class="footer__contact" href="https://www.instagram.com/quezzle_com" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--instagram">
-                                <use xlink:href="instagram"></use>
+                                <use xlink:href="#instagram"></use>
                             </svg></span><span class="footer__contact-caption">@quezzle_com</span></a>
                 </div>
                 <div class="footer__top-col">
                     <div class="footer__title">Contacts</div><a class="footer__contact" href="tel:+74951093075" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--phone">
-                                <use xlink:href="phone"></use>
+                                <use xlink:href="#phone"></use>
                             </svg></span><span class="footer__contact-caption">+7 (495) 109 30 75</span></a><a class="footer__contact" href="mailto:care@unidragon.com" target="_blank" rel="nofollow noopener"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--email">
                                 <use xlink:href="#email"></use>
                             </svg></span><span class="footer__contact-caption">care@unidragon.com</span></a>
