Quezzle custome page

--- a/sections/page-quezzle.liquid
+++ b/sections/page-quezzle.liquid
@@ -1369,3 +1369,16 @@
     </div>
 </div>
 {% include 'img-sprite.svg' %}
+
+{% schema %}
+{
+  "name": "Landing product",
+  "settings": [
+    {
+      "type": "product",
+      "id": "landing_product",
+      "label": "Landing product"
+    }
+  ]
+}
+{% endschema %}
